# DesignPatterns

./: .gitignore  CMakeLists.txt  CMakeSettings.json  build.bat
Example/: CMakeLists.txt  exampleHelper.h
Example/Info/: CMakeLists.txt  main.cpp
Example/ObjectManager/: CMakeLists.txt  Object1.h  Object2.h  main.cpp
Example/PerformanceTimer/: CMakeLists.txt  main.cpp
Example/Singelton/: CMakeLists.txt  main.cpp
UnitTests/: CMakeLists.txt  Test.cpp  Test.h  TestRunner.cpp  TestRunner.h  exampleHelper.h  main.cpp
UnitTests/Tests/: TestInfo.h  TestObjectManager.h  TestPerformanceTimer.h  TestSingelton.h
core/: CMakeLists.txt
core/include/: DesignPatterns.h  DesignPatterns_global.h  Object.h  ObjectManager.h  PerformanceTimer.h  Singelton.h  SingeltonPattern.h  Utilities.h  Utilities_global.h
core/src/: DesignPatterns.cpp  Object.cpp  ObjectManager.cpp  PerformanceTimer.cpp  SingeltonPattern.cpp  Utilities.cpp
